@@ -3,6 +3,8 @@ Changelog
 
 4.7-dev - (unreleased)
 ----------------------
+* Bugfix: remove title from getRequiredHead call
+  [szabozo0 refs #14002]
 
 4.6 - (2012-08-27)
 ------------------
